DevOpsCheatsheets/k8s-from-scratch/k8s/oidc/policy/constraints/enforce-namespace-rolebinding-isolation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnforceNamespaceRoleBindingIsolation
metadata:
  name: enforce-namespace-rolebinding-isolation
  labels:
    oidc.lab/policy: namespace-isolation
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["RoleBinding"]
  parameters: {}
